# insar_studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_OPUS_GUIDE.md  DEVELOPMENT_MANUAL.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_REFERENCES.md  pyproject.toml
.cursor/rules/: insar_prep_project_rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: asf-download.md  asf_download_credential_design.md  asf_geodownloader_upgrade_plan.md  dem.md  getting-started.md  getting_started_for_testers.md  gui_beta_smoke_test.md  gui_beta_user_guide.md  packaging_readiness.md  release.md  release_readiness_v0_12_0_gui_beta.md  release_readiness_v0_15_0.md  release_readiness_v0_16_0.md  release_readiness_v0_1_0.md  roadmap.md  sentinel2_cdse_gacos_and_queue_plan.md  windows_exe_smoke_test.md
packaging/: component_manifest.example.json  insar_prep_desktop_entry.py  insar_prep_entry.py  insar_prep_gui_entry.py  insar_prep_gui_installer.iss  insar_studio_desktop_installer.iss
scripts/: build_dem_gdal_component.ps1  build_geoid_npz.py  build_windows_desktop_exe.ps1  build_windows_desktop_installer.ps1  build_windows_exe.ps1  build_windows_gui_exe.ps1  build_windows_installer.ps1  check_ascii_quotes.py  dev_ui_screenshot.py  make_windows_smoke_package.ps1
sentinel2/哥白尼就批量下载S2/: README_哥白尼批量下载说明.md  copernicus_batch_download.py  参考1.txt
sentinel2/哥白尼就批量下载S2/参考2/: EastChinaSea_large.geojson  MSI_batch_download.py  OLCI_batch_download.py  Yangtze.geojson  使用方法.txt
src/insar_prep/: __init__.py  i18n.py
src/insar_prep/cli/: __init__.py  commands.py  main.py
src/insar_prep/core/: __init__.py  component_manager.py  enums.py  error_codes.py  events.py  exceptions.py  logging.py  models.py  naming.py  serialization.py  update_check.py
src/insar_prep/data/: egm96_15.npz
src/insar_prep/desktop/: __init__.py  __main__.py  activity_log.py  api.py  app.py  download_job.py
src/insar_prep/gui/: __init__.py  app.py  main_window.py  map_picker.py  state.py  theme.py
src/insar_prep/gui/dialogs/: __init__.py  earthdata_login_dialog.py  gacos_email_dialog.py  opentopography_key_dialog.py  project_dialog.py  region_dialog.py  workspace_dialog.py
src/insar_prep/gui/widgets/: __init__.py  aoi_panel.py  asf_cart_panel.py  dem_download_panel.py  download_panel.py  gacos_download_panel.py  planning_panel.py  project_tree.py  queue_log_panel.py  report_panel.py  scene_check_panel.py  scene_table.py  settings_panel.py  status_bar.py  workflow_steps.py
src/insar_prep/processing/: __init__.py  aoi.py  aoi_import.py  aoi_vector.py
src/insar_prep/providers/: __init__.py
src/insar_prep/providers/asf/: __init__.py  cart_parser.py  credentials.py  download_plan.py  download_runner.py  downloader.py  metadata.py  scene_parser.py
src/insar_prep/providers/dem/: __init__.py  conversion_planner.py  convert_runner.py  converter.py  credentials.py  download_runner.py  downloader.py  geoid.py  planner.py  types.py
src/insar_prep/providers/gacos/: __init__.py  credentials.py  download_runner.py  downloader.py  import_checker.py  importer.py  planner.py  types.py
src/insar_prep/providers/orbit/: __init__.py  downloader.py  orbit_matcher.py  orbit_parser.py  types.py
src/insar_prep/quality/: __init__.py  scene_checks.py  types.py
src/insar_prep/queue/: __init__.py  executor.py  task_queue.py  types.py
src/insar_prep/reporting/: __init__.py  generator.py  html.py  manifest.py  types.py  warnings.py
src/insar_prep/sar_apps/: __init__.py  sarscape.py
tests/: conftest.py  test_import.py
tests/e2e/: test_asf_auth_cli.py  test_asf_download_cli.py  test_asf_download_plan_cli.py  test_convert_dem_cli.py  test_download_dem_cli.py  test_gacos_cli.py  test_gacos_import_cli.py  test_gui_beta_workflow.py  test_no_network_guards.py  test_prepare_workflow.py  test_update_check_cli.py
tests/fixtures/asf/: scenes.csv  scenes.geojson  urls.txt
tests/fixtures/gacos/products_ok/: 20230101.ztd  20230101.ztd.rsc
tests/fixtures/orbits/: S1A_OPER_AUX_RESORB_OPOD_20240101T130000_V20240101T095942_20240101T131242.EOF  readme.txt
tests/fixtures/orbits/nested/: S1B_OPER_AUX_POEORB_OPOD_20240102T120000_V20240101T225942_20240103T005942.EOF
tests/unit/: test_aoi.py  test_aoi_import.py  test_aoi_vector.py  test_asf_cart_parser.py  test_asf_credentials.py  test_asf_download_plan.py  test_asf_download_runner.py  test_asf_fake_downloader.py  test_asf_metadata.py  test_asf_real_downloader.py  test_asf_scene_parser.py  test_cli_prepare.py  test_dem_conversion_planner.py  test_dem_convert_runner.py  test_dem_converter.py  test_dem_credentials.py  test_dem_download_runner.py  test_dem_downloader.py  test_dem_geoid.py  test_dem_planner.py  test_desktop_admin_boundaries.py  test_desktop_asf_download_job.py  test_enums.py  test_error_codes.py  test_exceptions.py  test_gacos_credentials.py  test_gacos_download_runner.py  test_gacos_downloader.py  test_gacos_import_checker.py  test_gacos_importer.py  test_gacos_planner.py  test_gui_aoi_panel.py  test_gui_asf_cart_panel.py  test_gui_dem_download_panel.py  test_gui_download_panel.py  test_gui_earthdata_login_dialog.py  test_gui_entry.py  test_gui_gacos_download_panel.py  test_gui_layout.py  test_gui_map_picker.py  (+23 more)
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AoiDrawMap.tsx  MapCard.tsx  OnboardingTour.tsx  SceneImportSection.tsx  Sidebar.tsx  TopBar.tsx  WorkbenchMap.tsx  common.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  textarea.tsx
ui/src/data/: adminBoundaries.ts
ui/src/lib/: bridge.ts  useContext.ts
ui/src/pages/: Aoi.tsx  Convert.tsx  Download.tsx  Overview.tsx  Placeholder.tsx  Report.tsx  Scenes.tsx  Settings.tsx  Workbench.tsx  Workspace.tsx
