[project]
name = "insar-prep"
version = "0.12.0"
description = "SARscape-oriented InSAR data preparation and quality-checking assistant."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "hhanmj", email = "hhanmj25@gmail.com" }]
keywords = ["insar", "sarscape", "sentinel-1", "dem", "gacos", "orbit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2",
    "shapely>=2",
]

[project.optional-dependencies]
# Desktop GUI (beta skeleton). Optional: the offline CLI never needs PySide6.
# Install with: uv sync --extra gui
gui = [
    "PySide6>=6.7",
]

[project.urls]
Homepage = "https://github.com/hhanmj/insar_assistant"
Repository = "https://github.com/hhanmj/insar_assistant"

[project.scripts]
insar-prep = "insar_prep.cli.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insar_prep"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Third-party reference code lives here for study only; never lint/format it.
extend-exclude = ["参考项目"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
