[project]
name = "insar-prep"
version = "2.0.2"
description = "SARscape-oriented InSAR data preparation and quality-checking assistant."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "hhanmj", email = "hhanmj25@gmail.com" }]
keywords = ["insar", "sarscape", "sentinel-1", "dem", "gacos", "orbit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2",
    "shapely>=2",
]

[project.optional-dependencies]
# Desktop GUI (beta skeleton). Optional: the offline CLI never needs PySide6.
# Install with: uv sync --extra gui
gui = [
    "PySide6>=6.7",
]
# Real ASF SLC download (NASA Earthdata). Optional: the offline core (prepare /
# plan-asf-downloads / gui) never needs these. `asf-search` provides ASF's
# official Earthdata session; `requests` performs the stream; `keyring` stores
# Earthdata credentials in the OS secret store. Install with:
# uv sync --extra download
download = [
    "requests>=2.31",
    "PySocks>=1.7",
    "keyring>=24",
    "asf-search>=8.0",
]
# Real DEM vertical-datum conversion (orthometric EGM96/EGM2008 -> WGS84
# ellipsoid). Optional: the offline core only *plans* the conversion. `rasterio`
# reads/writes the GeoTIFF DEM; `numpy` interpolates the bundled EGM96 geoid
# grid. Install with: uv sync --extra convert
convert = [
    "rasterio>=1.3",
    "numpy>=1.24",
]
# Modern desktop UI: a web frontend (React/Vite, built into ui/dist) hosted in a
# native OS WebView2 window via pywebview. Reuses the existing core in-process (no
# Rust, no sidecar). Optional: the offline CLI never needs it.
# Install with: uv sync --extra desktop
desktop = [
    "pywebview>=5",
]

[project.urls]
Homepage = "https://github.com/hhanmj/insar_studio"
Repository = "https://github.com/hhanmj/insar_studio"

[project.scripts]
insar-prep = "insar_prep.cli.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insar_prep"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
# Local study material and generated build outputs should stay out of public checks.
extend-exclude = [
    "参考项目",
    "sentinel2",
    "边界",
    "docs",
    "tests",
    "build",
    "dist",
    "release",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "T20"]

[tool.ruff.lint.per-file-ignores]
# Maintenance/data-build scripts are run by hand and may print progress.
"scripts/*.py" = ["T201"]
